# RisalDash

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  keywords.txt  library.json  library.properties
.github/workflows/: ci.yml
ci/: platformio.ini
ci/src/: display.h  main.cpp  showcase_c6.cpp  weather.h
ci/src/c6/: showcase_c6.cpp
ci/src/s3/: audio.h  display.h  led.h  sensors.h  showcase_s3.cpp  touch.h  voice.h
examples/: README.md
examples/01_Start/WidgetSizes/: WidgetSizes.ino
examples/01_Start/WifiSetup/: WifiSetup.ino
examples/03_Pages/Layouts/: Layouts.ino
examples/03_Pages/UiKit/: UiKit.ino
examples/04_Templates/AccessControl/: AccessControl.ino
examples/04_Templates/AirQuality/: AirQuality.ino
examples/04_Templates/AquariumController/: AquariumController.ino
examples/04_Templates/BatteryBMS/: BatteryBMS.ino
examples/04_Templates/CNCMachine/: CNCMachine.ino
examples/AllWidgets/: AllWidgets.ino
examples/Any-ESP/Layouts/: Layouts.ino
examples/ESP32-C6-LCD-1_47/: ESP32-C6-LCD-1_47.ino  ble.h  display.h  i18n.h  led.h  weather.h
examples/FirstBoot/: FirstBoot.ino
examples/Minimal/: Minimal.ino
lang/: ar.json  en.json  ru.json
src/: RisalApi.cpp  RisalAssets.cpp  RisalAssets.h  RisalDash.h  RisalFake.h  RisalInternal.h  RisalMqtt.cpp  RisalProvision.cpp  RisalRender.cpp  RisalSensors.cpp  RisalUI.cpp  RisalUI.h  RisalWeather.h  RisalWidget.h
src/lang/: RisalLang.gen.h
src/widgets/: base.h  controls.h  device.h  display.h  icons.h  inputs.h  layout.h  network.h  radio.h  visual.h
tools/: genlang.py
(+48 files in other folders)
